--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
             },
             "outputPath": "dist/chatstream_frontend",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
